--- a/TMessagesProj/build.gradle
+++ b/TMessagesProj/build.gradle
@@ -1,8 +1,19 @@
+buildscript {
+    repositories {
+        maven { url 'https://maven.fabric.io/public' }
+    }
+
+    dependencies {
+        classpath 'io.fabric.tools:gradle:1.+'
+    }
+}
 apply plugin: 'com.android.application'
+apply plugin: 'io.fabric'
 
 repositories {
     mavenCentral()
     jcenter()
+    maven { url 'https://maven.fabric.io/public' }
 }
 
 dependencies {
@@ -29,6 +40,7 @@ dependencies {
     compile 'com.squareup.okhttp:okhttp-urlconnection:2.5.0'
     compile 'com.github.rahatarmanahmed:circularprogressview:2.4.0'
     compile 'com.makeramen:roundedimageview:2.1.2'
+
 
 
 }
